<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.footprint.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:orderInCategory="104"
        android:title="@string/menu_item_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_item_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="103"
        android:title="@string/menu_item_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="102"
        android:title="@string/menu_item_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_comment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:orderInCategory="101"
        android:title="@string/menu_item_ticker"
        app:showAsAction="always" />
</menu>
